--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -19,7 +19,7 @@ jobs:
             heroku_app_name: "pokedex-open" 
             heroku_email: "shevkunovnikita97@gmail.com"
             branch: main
-            dontuseforce
+            dontuseforce: true
         - name: npm install
           run: npm install
         - name: lint
