--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -27,3 +27,8 @@ jobs:
           command: npm run test:e2e
           start: npm run start-prod
           wait-on: http://localhost:5000
+      - name: heroku Deployment
+        uses: AkhileshNS/heroku-deploy
+        heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+        heroku_app_name: ancient-fortress-86203
+        heroku_email: 16guitar@gmail.com
