--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -28,7 +28,8 @@ jobs:
           start: npm run start-prod
           wait-on: http://localhost:5000
       - name: heroku Deployment
-        uses: AkhileshNS/heroku-deploy
-        heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-        heroku_app_name: ancient-fortress-86203
-        heroku_email: 16guitar@gmail.com
+        uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
+        with:
+          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+          heroku_app_name: ancient-fortress-86203
+          heroku_email: 16guitar@gmail.com
