--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -34,3 +34,4 @@ jobs:
           heroku_app_name: ancient-fortress-86203
           heroku_email: 16guitar@gmail.com
           healthcheck: "https://ancient-fortress-86203.herokuapp.com/health"
+          rollbackonhealthcheckfailed: true
