--- a/.github/workflows/deployment_pipeline.yml
+++ b/.github/workflows/deployment_pipeline.yml
@@ -17,3 +17,9 @@ jobs:
         run: npm install
       - name: lint
         run: npm run eslint
+      - name: e2e tests
+        uses: cypress-io/github-action@v2
+        with:
+          start: npm run start-prod
+          command: npm run test:e2e
+          wait-on: http://localhost:5000
