--- a/.github/workflows/deployment_pipeline.yml
+++ b/.github/workflows/deployment_pipeline.yml
@@ -15,11 +15,5 @@ jobs:
           node-version: '16'
       - name: npm install
         run: npm install
-      # - name: lint
-      #   run: npm run eslint
-      - name: e2e tests
-        uses: cypress-io/github-action@v2
-        with:
-          command: npm run test:e2e
-          start: npm run start-prod
-          wait-on: http://localhost:5000
+      - name: lint
+        run: npm run eslint
