--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "webpack-dev-server --open --mode development",
     "start-prod": "node app.js",
     "test": "jest",
-    "eslint": "eslint './**/*.{js,jsx}'",
+    "eslint": "eslint --ignore-path .gitignore --ext .js,.jsx,.ts,.tsx .",
     "build": "webpack --mode production"
   },
   "repository": {
