--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -7,3 +7,5 @@ jobs:
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
       - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
       - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
+      - run: echo "Hello World!"
+      - run: echo "Now it is ${{date}}"
