--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -8,4 +8,4 @@ jobs:
       - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
       - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
       - run: echo "Hello World!"
-      - run: echo "Now it is ${{date}}"
+      - run: echo "Now it is $(date)"
