--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -9,3 +9,4 @@ jobs:
       - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
       - run: echo "Hello World!"
       - run: echo "Now it is $(date)"
+      - run: echo "Directory Content $(ls -l)"
