--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - uses: cypress-io/github-action@v2
-      - with:
+        with:
           command: npm run test:e2e
           start: npm run start-prod
           wait-on: http://localhost:5000
