--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -15,6 +15,7 @@ jobs:
         run: npm install
       - uses: cypress-io/github-action@v2
         with:
+          browser: chrome
           command: npm run test:e2e
           start: npm run start-prod
           wait-on: http://localhost:5000
