--- a/.github/workflows/githubactions.yml
+++ b/.github/workflows/githubactions.yml
@@ -5,6 +5,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: echo "Hello World"
-      - run: echo date
+      - run: date
       - run: ls
      
