Add e2e test to workflow

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -21,3 +21,5 @@ jobs:
         run: npm run build
       - name: test
         run: npm test
+      - name: cypress-test
+        run: npm run cy:run
