--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -22,4 +22,8 @@ jobs:
       - name: test
         run: npm test
       - name: cypress-test
-        run: npm run cy:run
+        uses: cypress-io/github-action@v2
+        with:
+          command: npm run cy:run
+          start: npm run start-prod
+          wait-on: http://localhost:5000
