--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "eslint": "eslint './**/*.{js,jsx}'",
     "build": "webpack --mode production",
     "cypress:open": "cypress open",
-    "cy:run": "$(npm bin)/cypress run"
+    "cy:run": "cypress run"
   },
   "repository": {
     "type": "git",
