--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -11,11 +11,11 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v2
-      - run: CI=false
-        with:
+        with:  
           node-version: '16'
       - name: npm install 
         run: npm install  
+        run: CI=false
       - name: lint   
         run: npm run eslint
       - name: build
