--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -9,13 +9,13 @@ jobs:
   simple_deployment_pipeline:
     runs-on: ubuntu-20.04
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
-        with:  
-          node-version: '16'
-      - name: npm install 
-        run: npm install CI=false
-      - name: lint   
+        with:
+          node-version: "16"
+      - name: npm install
+        run: npm install
+      - name: lint
         run: npm run eslint
       - name: build
         run: npm run build
@@ -24,6 +24,6 @@ jobs:
       - name: cypress-test
         uses: cypress-io/github-action@v2
         with:
-          command: npm run cy:run
-          start: npm run start-prod
-          wait-on: http://localhost:5000
+          build: npm run build
+          start: npm start
+
