--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -22,7 +22,7 @@ jobs:
       - name: test
         run: npm test
       - name: cypress-test
-        uses: cypress-io/github-action@v2
+      -  uses: cypress-io/github-action@v2
         run: npm ci
         with:
           command: npm run cy:run
