--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -22,9 +22,9 @@ jobs:
       - name: test
         run: npm test
       - name: cypress-test
-      -  uses: cypress-io/github-action@v2
-        run: npm ci
+        uses: cypress-io/github-action@v2
         with:
+          - useLockFile: false
           command: npm run cy:run
           start: npm run start-prod
           wait-on: http://localhost:5000
