Update pipeline: with lockfile

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -24,6 +24,7 @@ jobs:
       - name: cypress-test
         uses: cypress-io/github-action@v2
         with:
+          useLockFile: true
           start: npm run start-prod
           command: npx cypress run
           wait-on: http://localhost:5000
