--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -9,8 +9,10 @@ jobs:
   simple_deployment_pipeline:
     runs-on: ubuntu-20.04
     steps:
+      - name: Checkout
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
+        uses: actions/setup-node@v2
+      - run: CI=false
         with:
           node-version: "16"
       - name: npm install
@@ -21,10 +23,8 @@ jobs:
         run: npm run build
       - name: test
         run: npm test
-      - name: cypress-test
+      - name: Cypress run
         uses: cypress-io/github-action@v2
         with:
-          useLockFile: true
-          start: npm run start-prod
-          command: npx cypress run
-          wait-on: http://localhost:5000
+          command: npm cypress run
+          wait-on: 'http://localhost:3000'
