--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -7,12 +7,16 @@ on:
 
 jobs:
   simple_deployment_pipeline:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [16.x, 17.x]
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
-        with:
-          node-version: "16"
+      - uses: actions/checkout@v3
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+      with:
+        node-version: ${{ matrix.node-version }}
       - name: npm install
         run: npm install
       - name: lint
@@ -21,6 +25,7 @@ jobs:
         run: npm run build
       - name: test
         run: npm test
+      - run: npm ci
       - name: cypress-test
         uses: cypress-io/github-action@v2
         with:
