--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -12,13 +12,12 @@ jobs:
       matrix:
         node-version: [16.x, 17.x]
 
-    steps:you
-    
+    steps: 
       - uses: actions/checkout@v3
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
-          node-version: ${{ matrix.node-version }}
+         node-version: ${{ matrix.node-version }}
       - name: npm install
         run: npm install
       - name: lint
