--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -30,7 +30,7 @@ jobs:
       - name: cypress-test
         uses: cypress-io/github-action@v4
         with:
-          command: npm cypress run
+          command: npx cypress run
           start: npm run start-prod
           wait-on: http://localhost:5000
 
