--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v2
         with:
-         node-version: node-version: '16'
+         node-version: '16'
       - name: npm install
         run: npm install
       - name: cypress-test
