--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -10,14 +10,14 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [16.x]
+        node-version: [14.x]
 
     steps: 
       - uses: actions/checkout@v2
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v2
         with:
-         node-version: '16'
+         node-version: ${{ matrix.node-version }}
       - name: npm install
         run: npm install
       - name: cypress-test
@@ -26,8 +26,6 @@ jobs:
           start: npm run start-prod
           command: npm run cy:run
           wait-on: http://localhost:5000
-          browser: firefox
-          headless: true
           wait-on-timeout: 120
 
 
