--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -27,5 +27,5 @@ jobs:
           command: npm run cy:run
           wait-on: http://localhost:5000
           wait-on-timeout: 120
-
+      - run: ls 
 
