--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -29,4 +29,8 @@ jobs:
           wait-on: http://localhost:5000
           browser: firefox
           wait-on-timeout: 120
-
+      - name: deploy 
+        uses: akhileshns/heroku-deploy@v3.12.12
+        with:
+           heroku_api_key: ${{secrets.HEROKU_KEY}}
+           heroku_app_name: "https://pokedexy-app.herokuapp.com/"
