--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -34,3 +34,4 @@ jobs:
         with:
            heroku_api_key: ${{secrets.HEROKU_KEY}}
            heroku_app_name: "https://pokedexy-app.herokuapp.com/"
+           heroku_email: "mieyle@protonmail.com"
